[project]
name = "animatediff-cli"
authors = [
  { name = "Andi Powers-Holmes", email = "aholmes@omnom.net" },
]
description = "A CLI for animatediff"
readme = "README.md"
requires-python = ">=3.10, <3.12"
keywords = [
  "deep-learning",
  "diffusers",
  "machine-learning",
  "neural-networks",
  "animatediff",
  "pytorch",
  "stable-diffusion",
  "transformers",
]
license = { file = "LICENSE.md" }
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

dependencies = [
  "accelerate >= 0.26.1",
  "chardet == 5.1.0",
  "colorama >= 0.4.3, < 0.5.0",
  "cmake >= 3.25.0",
  "diffusers >= 0.21.0",
  "einops >= 0.6.1",
  "gdown >= 4.6.6",
  "ninja >= 1.11.0",
  "numpy >= 1.22.4",
  "omegaconf >= 2.3.0",
  "pillow >= 9.4.0",
  "pydantic >= 1.10.0, < 2.0.0",
  "rich >= 13.0.0, < 14.0.0",
  "safetensors >= 0.3.1",
  "sentencepiece >= 0.1.99",
  "shellingham >= 1.5.0, < 2.0.0",
  "torch >= 2.0.0, < 2.2.0",
  "torchaudio",
  "torchvision",
  "transformers >= 4.30.2",
  "typer >= 0.9.0, < 1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff >=0.0.289",
  "setuptools-scm >= 8.0.0",
  "pre-commit >= 3.3.0",     # remember to run `pre-commit install` after installing
  "tabulate >= 0.8.9",       # for inductor log prettyprinting
  "ipython",                 # for debugging
]
xformers = [
  "xformers >= 0.0.21",
]
rife = [
  "ffmpeg-python >= 0.2.0",
]
all = [
  "animatediff-cli[dev]",
  "animatediff-cli[xformers]",
  "animatediff-cli[rife]",
]

[project.scripts]
animatediff = "animatediff.cli:cli"


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]

[tool.setuptools_scm]
write_to = "src/animatediff/_version.py"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["animatediff*"]
exclude = ["animatediff.tests*"]

[tool.setuptools.package-data]
"*" = [
  "*.css",
  "*.json",
  "*.md",
  "*.txt",
]
"animatediff.data" = [
  "*.ckpt",
  "*.pt",
  "*.pth",
  "*.safetensors",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["/usr/lib/*"]

[tool.ruff.lint]
ignore = [
  "F841", # local variable assigned but never used
  "F842", # local variable annotated but never used
  "E501", # line too long - will be fixed in format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
exclude = [
  "src/animatediff/_version.py", # generated by setuptools_scm
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["animatediff"]


[tool.pyright]
include = ["src/**"]
exclude = ["/usr/lib/**"]
stubPath = "./typings"
