[metadata]
name = animatediff
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
py_modules =
    animatediff
include_package_data = True
install_requires =
    accelerate >= 0.20.3
    colorama >= 0.4.3, < 0.5.0
    cmake >= 3.25.0
    diffusers >= 0.18.1
    einops >= 0.6.1
    ninja >= 1.11.0
    numpy >= 1.24.3
    omegaconf >= 2.3.0
    pillow >= 9.5.0, < 10.0.0
    rich >= 13.0.0, < 14.0.0
    safetensors >= 0.3.1
    sentencepiece >= 0.1.99
    shellingham >= 1.5.0, < 2.0.0
    torch >= 2.0.0, < 2.2.0
    torchaudio
    torchvision
    transformers >= 4.30.2
    typer >= 0.9.0, < 1.0.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0
    ipython
xformers =
    xformers >= 0.0.21

[options.entry_points]
console_scripts =
    animatediff = animatediff.app:app

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
